Fix on Mobile iOS and Android

--- a/style/main.css
+++ b/style/main.css
@@ -115,17 +115,15 @@ footer {
 .info {
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .social-media {
     position: fixed;
     bottom: 15%;
     height: 20px;
-    display: flex;
-    /* flex-wrap: wrap; */
-    justify-content: space-around;
 }
 
 .inner {
@@ -133,8 +131,8 @@ footer {
     justify-content: space-evenly;
     align-items: center;
 
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
     background-color: black;
     border-radius: 50px;
     margin-top: 3%;
@@ -167,12 +165,33 @@ footer {
     padding-right: 5%;
 }
 
-@media only screen and (max-width: 1500px) {
+@media only screen and (max-width: 1000px) {
+    .clearOnMobile {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
     .clearOnMobile {
         display: none;
     }
 
     .inner {
         padding: 2%;
+        border-radius: 25px;
+        justify-content: center;
+    }
+
+    .padding {
+        width: calc(100%/3);
+    }
+
+    .main {
+        margin: 5%;
+    }
+
+    .hiC2 {
+        height: 18vh;
+        width: 18vh;
     }
 }
